# simulation-biologie

./: README.md  overrides.json  pyproject.toml  requirements.txt
content/: 0_notebooks.ipynb  1_variables_operations.ipynb  2_affichage.ipynb  3_listes.ipynb  4_boucles_tests.ipynb  GC_content.ipynb  TP1.ipynb  TP1_3_GC_intro.ipynb  TP1_old.ipynb  TP2_1_listes.ipynb  TP2_2_boucles_tests.ipynb  TP2_3_fichiers.ipynb  TP2_4.ipynb  TP2_correction.ipynb  overrides.json  questions_1.json  questions_gc.json
content/L2/TP1/: TP1_1_variables_operations.ipynb  TP1_2_affichage.ipynb  TP1_3_GC_intro.ipynb  TP1_4_GC_calcul.ipynb  TP1_4_GC_calcul_correction.ipynb
content/L2/TP2/: TP1_old_correction.ipynb  TP2_1_listes.ipynb  TP2_2_boucles_tests.ipynb  TP2_3_fichiers.ipynb  TP2_4.ipynb  TP2_4_GC_automatisation.ipynb
content/L3/TP3/: TP3_1_fonctions.ipynb  TP3_2_graphiques.ipynb  TP3_3_discretisations.ipynb  TP3_4_cinetique_enzymatique.ipynb  TP3_5_determination_Km_Vmax.ipynb  TP3_cinetique_enzymatique.ipynb  TP3_détermination_Km_Vmax.ipynb  cinetique.py  cinetique_preparation.ipynb  draft.ipynb  exp1.txt  exp10.txt  exp2.txt  exp3.txt  exp4.txt  exp5.txt  exp6.txt  exp7.txt  exp8.txt  exp9.txt
