[project]
name = "simulation-biologie-git"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter-ai[all]>=2.31.7",
    "jupyterlab>=4.5.2",
    "jupyterlab-myst>=2.6.0",
    "jupyterquiz>=2.9.6.2",
    "matplotlib>=3.10.8",
    "scipy>=1.17.1",
]
